Fix wrong height and width calculations.

--- a/src/styles/mksoft.scss
+++ b/src/styles/mksoft.scss
@@ -26,8 +26,6 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
   }
 
   #fps {
